crea crides admin per refugis, usuaris i incidencies
